# Zoork

./: CMakeLists.txt  Character.cpp  Character.h  Command.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Location.cpp  Location.h  NullCommand.cpp  NullCommand.h  NullPassage.cpp  NullPassage.h  NullRoom.cpp  NullRoom.h  Passage.cpp  Passage.h  PassageDefaultEnterCommand.cpp  PassageDefaultEnterCommand.h  Player.cpp  Player.h  README.md  Room.cpp  Room.h  RoomDefaultEnterCommand.cpp  RoomDefaultEnterCommand.h  Untitled.drawio  UseItemCommand.cpp  UseItemCommand.h  ZOOrkEngine.cpp  ZOOrkEngine.h  main.cpp  mob.h  npc.h
